--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -19,17 +19,23 @@
     }
    ],
    "source": [
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "files_name = ['Accidents0514.csv', 'Casualties0514.csv', 'Vehicles0514.csv' ]\n",
     "files_path = './data/'\n",
     "\n",
     "files = [f'{files_path}{name}'for name in files_name]\n",
     "files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First preprocessing exec"
    ]
   },
   {
@@ -40,15 +46,8 @@
    "source": [
     "df_acc = pd.read_csv(files[0], index_col=0, dtype={'LSOA_of_Accident_Location': str})\n",
     "df_cas = pd.read_csv(files[1], index_col=0).drop('Vehicle_Reference', axis=1)\n",
-    "df_veh = pd.read_csv(files[2], index_col=0).drop('Vehicle_Reference', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_veh = pd.read_csv(files[2], index_col=0).drop('Vehicle_Reference', axis=1)\n",
+    "\n",
     "df = df_acc.join(df_cas, lsuffix='_Cas', how='inner').join(df_veh, lsuffix='_Veh', how='inner')"
    ]
   },
@@ -78,26 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f'{files_path}complete.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df.to_csv(f'{files_path}complete.csv')\n",
     "df.to_pickle(f'{files_path}complete_pickled.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nan_values = df.isna().sum()\n",
-    "nan_values = nan_values[nan_values > 0].sort_values(ascending=False)"
    ]
   },
   {
@@ -123,6 +104,8 @@
     }
    ],
    "source": [
+    "nan_values = df.isna().sum()\n",
+    "nan_values = nan_values[nan_values > 0].sort_values(ascending=False)\n",
     "nan_values"
    ]
   },
@@ -630,15 +613,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Time'] = df['Time'].map(lambda x: int(x.split(':')[0])*60 + int(x.split(':')[1]) if type(x) == str else x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['Time'] = df['Time'].map(lambda x: int(x.split(':')[0])*60 + int(x.split(':')[1]) if type(x) == str else x)\n",
     "df['Time'] = df['Time'].fillna(df['Time'].mean())"
    ]
   },
@@ -649,25 +624,6 @@
    "outputs": [],
    "source": [
     "df['Date'] = df['Date'].map(lambda x: pd.to_datetime(x, infer_datetime_format=True ).timestamp())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(f'{files_path}preprocessed.csv')\n",
-    "df.to_pickle(f'{files_path}preprocessed_pickled.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_pickle(f'{files_path}preprocessed_pickled.pkl')"
    ]
   },
   {
@@ -788,134 +744,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(                Location_Easting_OSGR  Location_Northing_OSGR  Police_Force  \\\n",
-       " Accident_Index                                                                \n",
-       " 200501BS00001                525680.0                178240.0             1   \n",
-       " 200501BS00002                524170.0                181650.0             1   \n",
-       " 200501BS00003                524520.0                182240.0             1   \n",
-       " 200501BS00003                524520.0                182240.0             1   \n",
-       " 200501BS00004                526900.0                177530.0             1   \n",
-       " ...                               ...                     ...           ...   \n",
-       " 2014984138414                323869.0                566853.0            98   \n",
-       " 2014984139614                314072.0                579971.0            98   \n",
-       " 2014984139614                314072.0                579971.0            98   \n",
-       " 2014984139614                314072.0                579971.0            98   \n",
-       " 2014984139614                314072.0                579971.0            98   \n",
-       " \n",
-       "                 Number_of_Vehicles  Number_of_Casualties          Date  \\\n",
-       " Accident_Index                                                           \n",
-       " 200501BS00001                    1                     1  1.112314e+09   \n",
-       " 200501BS00002                    1                     1  1.114906e+09   \n",
-       " 200501BS00003                    2                     1  1.117584e+09   \n",
-       " 200501BS00003                    2                     1  1.117584e+09   \n",
-       " 200501BS00004                    1                     1  1.120176e+09   \n",
-       " ...                            ...                   ...           ...   \n",
-       " 2014984138414                    3                     2  1.418774e+09   \n",
-       " 2014984139614                    2                     2  1.419379e+09   \n",
-       " 2014984139614                    2                     2  1.419379e+09   \n",
-       " 2014984139614                    2                     2  1.419379e+09   \n",
-       " 2014984139614                    2                     2  1.419379e+09   \n",
-       " \n",
-       "                 Day_of_Week    Time  Local_Authority_(District)  \\\n",
-       " Accident_Index                                                    \n",
-       " 200501BS00001             3  1062.0                          12   \n",
-       " 200501BS00002             4  1056.0                          12   \n",
-       " 200501BS00003             5    15.0                          12   \n",
-       " 200501BS00003             5    15.0                          12   \n",
-       " 200501BS00004             6   635.0                          12   \n",
-       " ...                     ...     ...                         ...   \n",
-       " 2014984138414             4   415.0                         917   \n",
-       " 2014984139614             4   900.0                         917   \n",
-       " 2014984139614             4   900.0                         917   \n",
-       " 2014984139614             4   900.0                         917   \n",
-       " 2014984139614             4   900.0                         917   \n",
-       " \n",
-       "                 Local_Authority_(Highway)  ...  Was_Vehicle_Left_Hand_Drive?  \\\n",
-       " Accident_Index                             ...                                 \n",
-       " 200501BS00001                           0  ...                             1   \n",
-       " 200501BS00002                           0  ...                             1   \n",
-       " 200501BS00003                           0  ...                             1   \n",
-       " 200501BS00003                           0  ...                             1   \n",
-       " 200501BS00004                           0  ...                             1   \n",
-       " ...                                   ...  ...                           ...   \n",
-       " 2014984138414                         206  ...                             1   \n",
-       " 2014984139614                         206  ...                             1   \n",
-       " 2014984139614                         206  ...                             1   \n",
-       " 2014984139614                         206  ...                             1   \n",
-       " 2014984139614                         206  ...                             1   \n",
-       " \n",
-       "                 Journey_Purpose_of_Driver  Sex_of_Driver  Age_of_Driver  \\\n",
-       " Accident_Index                                                            \n",
-       " 200501BS00001                          15              2             74   \n",
-       " 200501BS00002                           1              1             42   \n",
-       " 200501BS00003                           1              1             35   \n",
-       " 200501BS00003                          15              1             62   \n",
-       " 200501BS00004                          15              2             49   \n",
-       " ...                                   ...            ...            ...   \n",
-       " 2014984138414                           6              1             73   \n",
-       " 2014984139614                           1              1             40   \n",
-       " 2014984139614                           6              1             79   \n",
-       " 2014984139614                           1              1             40   \n",
-       " 2014984139614                           6              1             79   \n",
-       " \n",
-       "                 Age_Band_of_Driver  Engine_Capacity_(CC)  Propulsion_Code  \\\n",
-       " Accident_Index                                                              \n",
-       " 200501BS00001                   10                    -1               -1   \n",
-       " 200501BS00002                    7                  8268                2   \n",
-       " 200501BS00003                    6                  8300                2   \n",
-       " 200501BS00003                    9                  1762                1   \n",
-       " 200501BS00004                    8                  1769                1   \n",
-       " ...                            ...                   ...              ...   \n",
-       " 2014984138414                   10                  2143                2   \n",
-       " 2014984139614                    7                  4500                2   \n",
-       " 2014984139614                   11                  1398                2   \n",
-       " 2014984139614                    7                  4500                2   \n",
-       " 2014984139614                   11                  1398                2   \n",
-       " \n",
-       "                 Age_of_Vehicle  Driver_IMD_Decile  Driver_Home_Area_Type  \n",
-       " Accident_Index                                                            \n",
-       " 200501BS00001               -1                  7                      1  \n",
-       " 200501BS00002                3                 -1                     -1  \n",
-       " 200501BS00003                5                  2                      1  \n",
-       " 200501BS00003                6                  1                      1  \n",
-       " 200501BS00004                4                  2                      1  \n",
-       " ...                        ...                ...                    ...  \n",
-       " 2014984138414               -1                  8                      3  \n",
-       " 2014984139614                4                 -1                      3  \n",
-       " 2014984139614               11                 -1                      3  \n",
-       " 2014984139614                4                 -1                      3  \n",
-       " 2014984139614               11                 -1                      3  \n",
-       " \n",
-       " [4287593 rows x 60 columns],\n",
-       " Accident_Index\n",
-       " 200501BS00001    2\n",
-       " 200501BS00002    3\n",
-       " 200501BS00003    3\n",
-       " 200501BS00003    3\n",
-       " 200501BS00004    3\n",
-       "                 ..\n",
-       " 2014984138414    2\n",
-       " 2014984139614    3\n",
-       " 2014984139614    3\n",
-       " 2014984139614    3\n",
-       " 2014984139614    3\n",
-       " Name: Accident_Severity, Length: 4287593, dtype: int64)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x, y = df.drop('Accident_Severity', axis=1),  df['Accident_Severity']\n",
-    "x, y"
+    "df.to_csv(f'{files_path}preprocessed.csv')\n",
+    "df.to_pickle(f'{files_path}preprocessed_pickled.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Successive exec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(f'{files_path}preprocessed_pickled.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = df.drop('Accident_Severity', axis=1),  df['Accident_Severity']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Tree"
    ]
   },
   {
@@ -924,10 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
     "dt = DecisionTreeClassifier()\n",
-    "\n",
     "r = dt.fit(x.iloc[:3_000_000, :], y.iloc[:3_000_000])"
    ]
   },
@@ -969,16 +832,6 @@
    ],
    "source": [
     "r.score(x.iloc[3_000_000: , :], y.iloc[3_000_000:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(f'{files_path}preprocessed.csv')\n",
-    "df.to_pickle(f'{files_path}preprocessed_pickled.pkl')"
    ]
   }
  ],
