--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -26,16 +26,10 @@
     "\n",
     "files_name = ['Accidents0514.csv', 'Casualties0514.csv', 'Vehicles0514.csv' ]\n",
     "files_path = './data/'\n",
+    "complete_pickle = f\"{files_path}complete_pickled.pkl\"\n",
     "\n",
     "files = [f'{files_path}{name}'for name in files_name]\n",
     "files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## First preprocessing exec"
    ]
   },
   {
@@ -72,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the complete joined dataset not already preprocessed. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -79,6 +80,13 @@
    "source": [
     "df.to_csv(f'{files_path}complete.csv')\n",
     "df.to_pickle(f'{files_path}complete_pickled.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check columns with NaN values."
    ]
   },
   {
@@ -150,6 +158,13 @@
    "source": [
     "plt.barh(nan_values.index, nan_values, log=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Samples with missing latitude and longitude do not even have the Easting OSGR and Northing OSGR values."
    ]
   },
   {
@@ -608,6 +623,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map time value in HH:MM:SS format into total minutes. Fill missing values with the mean."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -618,12 +640,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map date in DD-MM-AAAA format into timestamp."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['Date'] = df['Date'].map(lambda x: pd.to_datetime(x, infer_datetime_format=True ).timestamp())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the correlation between Latitude and Longitude coordinates and OSGR. Keep only OSGR coordinates and drop also the LSOA feature. "
    ]
   },
   {
@@ -724,6 +760,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill missing OSGR coordinates with the average values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -731,6 +774,13 @@
    "source": [
     "df['Location_Easting_OSGR'] = df['Location_Easting_OSGR'].fillna(df['Location_Easting_OSGR'].mean())\n",
     "df['Location_Northing_OSGR'] = df['Location_Northing_OSGR'].fillna(df['Location_Northing_OSGR'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transform Local Authoty categories into numerical values. "
    ]
   },
   {
@@ -756,16 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Successive exec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_pickle(f'{files_path}preprocessed_pickled.pkl')"
+    "## Decision Tree"
    ]
   },
   {
@@ -775,13 +816,6 @@
    "outputs": [],
    "source": [
     "x, y = df.drop('Accident_Severity', axis=1),  df['Accident_Severity']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Decision Tree"
    ]
   },
   {
