add predict and score

--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -13,19 +13,23 @@
        " './data/Vehicles0514.csv']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "files_name = ['Accidents0514.csv', 'Casualties0514.csv', 'Vehicles0514.csv' ]\n",
     "files_path = './data/'\n",
+    "\n",
+    "main_data_path = \"../data/\"\n",
     "\n",
     "files = [f'{files_path}{name}'for name in files_name]\n",
     "files"
@@ -761,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,6 +779,86 @@
    "outputs": [],
    "source": [
     "x, y = df.drop('Accident_Severity', axis=1),  df['Accident_Severity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    3607415\n",
+       "2     596571\n",
+       "1      83607\n",
+       "Name: Accident_Severity, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Accident_Severity'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3    682\n",
+      "2    118\n",
+      "1     19\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    2768\n",
+      "2     456\n",
+      "1      52\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    11038\n",
+      "2     1815\n",
+      "1      254\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    44107\n",
+      "2     7297\n",
+      "1     1024\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    176455\n",
+      "2     29263\n",
+      "1      3997\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    352743\n",
+      "2     58484\n",
+      "1      8203\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    705418\n",
+      "2    117021\n",
+      "1     16421\n",
+      "Name: Accident_Severity, dtype: int64\n",
+      "3    1410935\n",
+      "2     233931\n",
+      "1      32855\n",
+      "Name: Accident_Severity, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# power of two\n",
+    "for dim in [1_024, 4_096, 16_384, 65_536, 262_144, 524_288, 1_048_576, 2_097_152]:\n",
+    "    \n",
+    "    temp_train, temp_test = train_test_split(df.sample(n=dim, random_state=42), test_size = 0.2)\n",
+    "    print(temp_train['Accident_Severity'].value_counts())\n",
+    "\n",
+    "    temp_train.to_csv(f'{main_data_path}input_train_{dim}.csv')\n",
+    "    temp_train.to_csv(f'{main_data_path}input_test_{dim}.csv')"
    ]
   },
   {
