--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,7 @@
        " './data/Vehicles0514.csv']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "Name: Accident_Severity, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,44 +806,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3    682\n",
-      "2    118\n",
-      "1     19\n",
+      "3    692\n",
+      "2    104\n",
+      "1     23\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    2768\n",
+      "3    2766\n",
       "2     456\n",
-      "1      52\n",
+      "1      54\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    11038\n",
-      "2     1815\n",
-      "1      254\n",
+      "3    11074\n",
+      "2     1783\n",
+      "1      250\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    44107\n",
-      "2     7297\n",
-      "1     1024\n",
+      "3    44115\n",
+      "2     7304\n",
+      "1     1009\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    176455\n",
-      "2     29263\n",
-      "1      3997\n",
+      "3    176514\n",
+      "2     29157\n",
+      "1      4044\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    352743\n",
-      "2     58484\n",
-      "1      8203\n",
+      "3    352824\n",
+      "2     58411\n",
+      "1      8195\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    705418\n",
-      "2    117021\n",
+      "3    705787\n",
+      "2    116652\n",
       "1     16421\n",
       "Name: Accident_Severity, dtype: int64\n",
-      "3    1410935\n",
-      "2     233931\n",
-      "1      32855\n",
+      "3    1411343\n",
+      "2     233565\n",
+      "1      32813\n",
       "Name: Accident_Severity, dtype: int64\n"
      ]
     }
@@ -920,11 +920,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "1e5983e64bdf840368ab29cea7e1e8f9b41dcdac8639741a33a347d09d965169"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('tf-gpu')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -938,9 +935,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "41c13a82859d9c8eeaae64bb03e81fbe8994b6a8069bf7bdf2d82d735be1fecb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
