--- a/scripts/runner.ipynb
+++ b/scripts/runner.ipynb
@@ -12,61 +12,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/data/Documents/Projects/Scala/FinalProject'"
+       "'d:\\\\Universita\\\\Magistrale\\\\2_Anno\\\\Scalable and Cloud Programming\\\\Progetto\\\\Accident-Severity-Prediction-Map-Reduce'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# os.chdir('..')\n",
+    "os.chdir('..')\n",
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input_256.csv:\t1.86875936\n",
-      "input_512.csv:\t5.665080611\n",
-      "input_1024.csv:\t20.451545647\n",
-      "input_2048.csv:\t106.705552897\n",
-      "input_4096.csv:\t"
+      "4096... ok\n"
      ]
     }
    ],
    "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
     "datapath = './data'\n",
     "# input = \"input_cut_5000_new.csv\"\n",
-    "for input in ['input_256.csv', 'input_512.csv', 'input_1024.csv', 'input_2048.csv', 'input_4096.csv']:\n",
-    "  print(input + \":\", end='\\t')\n",
-    "  subprocess.run([\"java\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", os.path.join(datapath, input)])"
+    "# for dim in [1_024, 4_096, 16_384, 65_536, 262_144, 524_288, 1_048_576, 2_097_152]:\n",
+    "train_input = os.path.join(datapath, f\"input_train_{4096}.csv\")\n",
+    "test_input = os.path.join(datapath, f\"input_test_{4096}.csv\")\n",
+    "\n",
+    "f = open(os.path.join(datapath, f\"{4096}_results.txt\"), \"a\")\n",
+    "q = open(os.path.join(datapath, f\"{4096}_error.txt\"), \"a\")\n",
+    "\n",
+    "f.write(\"===========\" + datetime.now().strftime(\"%m/%d - %H:%M\"))\n",
+    "print(f\"{4096}...\", end=' ')\n",
+    "subprocess.call([\"java\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", train_input, test_input], stdout=f, stderr=q)\n",
+    "\n",
+    "f.close()\n",
+    "print(\"ok\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q.close()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('venv': venv)",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -80,12 +91,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "492d95e6d494b0f5351d0faf5b480af904a7b4fc5f65f2c9dc8488ec10c24b25"
+    "hash": "41c13a82859d9c8eeaae64bb03e81fbe8994b6a8069bf7bdf2d82d735be1fecb"
    }
   }
  },
