changed call parameters

--- a/scripts/runner.ipynb
+++ b/scripts/runner.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,15 +59,16 @@
     "\n",
     "f.write(\"===========\" + datetime.now().strftime(\"%m/%d - %H:%M\"))\n",
     "print(f\"{4096}...\", end=' ')\n",
-    "subprocess.call([\"java\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", train_input, test_input], stdout=f, stderr=q)\n",
+    "subprocess.call([\"java\", \"-Xmx10G\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", train_input, test_input], stdout=f, stderr=q)\n",
     "\n",
     "f.close()\n",
+    "\n",
     "print(\"ok\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
