fix stack overflow

--- a/scripts/runner.ipynb
+++ b/scripts/runner.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Universita\\\\Magistrale\\\\2_Anno\\\\Scalable and Cloud Programming\\\\Progetto\\\\Accident-Severity-Prediction-Map-Reduce'"
+       "'d:\\\\Alessandra Boccuto\\\\Documenti\\\\Personal\\\\Unibo\\\\Materie\\\\Scalable\\\\Accident-Severity-Prediction-Map-Reduce'"
       ]
      },
      "execution_count": 2,
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,34 +51,42 @@
     "datapath = './data'\n",
     "# input = \"input_cut_5000_new.csv\"\n",
     "# for dim in [1_024, 4_096, 16_384, 65_536, 262_144, 524_288, 1_048_576, 2_097_152]:\n",
-    "train_input = os.path.join(datapath, f\"input_train_{4096}.csv\")\n",
-    "test_input = os.path.join(datapath, f\"input_test_{4096}.csv\")\n",
+    "train_input = os.path.join(datapath, f\"input_train_4096.csv\")\n",
+    "test_input = os.path.join(datapath, f\"input_test_4096.csv\")\n",
     "\n",
-    "f = open(os.path.join(datapath, f\"{4096}_results.txt\"), \"a\")\n",
-    "q = open(os.path.join(datapath, f\"{4096}_error.txt\"), \"a\")\n",
+    "f = open(os.path.join(datapath, f\"4096_results.log\"), \"a\")\n",
+    "q = open(os.path.join(datapath, f\"4096_error.log\"), \"a\")\n",
     "\n",
-    "f.write(\"===========\" + datetime.now().strftime(\"%m/%d - %H:%M\"))\n",
-    "print(f\"{4096}...\", end=' ')\n",
-    "subprocess.call([\"java\", \"-Xmx10G\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", train_input, test_input], stdout=f, stderr=q)\n",
+    "print(f\"4096...\", end=' ')\n",
+    "\n",
+    "run_date = datetime.now().strftime(\"%m/%d - %H:%M\")\n",
+    "f.write(\"\\r\\n===========\" + run_date)\n",
+    "q.write(\"\\r\\n===========\" + run_date)\n",
+    "f.close()\n",
+    "q.close()\n",
+    "\n",
+    "f = open(os.path.join(datapath, f\"4096_results.log\"), \"a\")\n",
+    "q = open(os.path.join(datapath, f\"4096_error.log\"), \"a\")\n",
+    "subprocess.call([\"java\", \"-Xmx10G\", \"-Xss1G\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", train_input, test_input], stdout=f, stderr=q)\n",
+    "f.write(\"\\r\\n\")\n",
+    "q.write(\"\\r\\n\")\n",
     "\n",
     "f.close()\n",
-    "\n",
+    "q.close()\n",
     "print(\"ok\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "q.close()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.9.10 ('ml-env')",
    "language": "python",
    "name": "python3"
   },
@@ -92,12 +100,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "41c13a82859d9c8eeaae64bb03e81fbe8994b6a8069bf7bdf2d82d735be1fecb"
+    "hash": "801db0422983b7b0a88b1867e1c191f1c8a74c49926eef68fac0019becddccd3"
    }
   }
  },
