create parallel c45 version

--- a/scripts/runner.ipynb
+++ b/scripts/runner.ipynb
@@ -40,48 +40,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4096... ok\n"
+      "1024... ok\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "jars = {\n",
+    "    \"seq\" : \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\",\n",
+    "    \"par\": \"./target/scala-2.12/FinalProject-assembly-0.1.0-PAR.jar\"\n",
+    "}\n",
     "\n",
     "datapath = './data'\n",
     "# input = \"input_cut_5000_new.csv\"\n",
     "# for dim in [1_024, 4_096, 16_384, 65_536, 262_144, 524_288, 1_048_576, 2_097_152]:\n",
-    "train_input = os.path.join(datapath, f\"input_train_4096.csv\")\n",
-    "test_input = os.path.join(datapath, f\"input_test_4096.csv\")\n",
+    "train_input = os.path.join(datapath, f\"input_train_1024.csv\")\n",
+    "test_input = os.path.join(datapath, f\"input_test_1024.csv\")\n",
     "\n",
-    "f = open(os.path.join(datapath, f\"4096_results.log\"), \"a\")\n",
-    "q = open(os.path.join(datapath, f\"4096_error.log\"), \"a\")\n",
+    "f = open(os.path.join(datapath, f\"1024_results.log\"), \"a\")\n",
+    "q = open(os.path.join(datapath, f\"1024_error.log\"), \"a\")\n",
     "\n",
-    "print(f\"4096...\", end=' ')\n",
+    "print(f\"1024...\", end=' ')\n",
     "\n",
     "run_date = datetime.now().strftime(\"%m/%d - %H:%M\")\n",
-    "f.write(\"\\r\\n===========\" + run_date)\n",
-    "q.write(\"\\r\\n===========\" + run_date)\n",
+    "f.write(\"\\r\\n===========\" + run_date + \"- PAR\")\n",
+    "q.write(\"\\r\\n===========\" + run_date + \"- PAR\")\n",
     "f.close()\n",
     "q.close()\n",
     "\n",
-    "f = open(os.path.join(datapath, f\"4096_results.log\"), \"a\")\n",
-    "q = open(os.path.join(datapath, f\"4096_error.log\"), \"a\")\n",
-    "subprocess.call([\"java\", \"-Xmx10G\", \"-Xss1G\", \"-jar\", \"./target/scala-2.12/FinalProject-assembly-0.1.0-SNAPSHOT.jar\", train_input, test_input], stdout=f, stderr=q)\n",
+    "f = open(os.path.join(datapath, f\"1024_results.log\"), \"a\")\n",
+    "q = open(os.path.join(datapath, f\"1024_error.log\"), \"a\")\n",
+    "subprocess.call([\"java\", \"-Xmx10G\", \"-Xss256k\", \"-jar\", jars[\"par\"], train_input, test_input], stdout=f, stderr=q)\n",
     "f.write(\"\\r\\n\")\n",
     "q.write(\"\\r\\n\")\n",
     "\n",
     "f.close()\n",
     "q.close()\n",
+    "\n",
     "print(\"ok\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
