changed jar execution

--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "Name: Accident_Severity, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,44 +806,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3    692\n",
-      "2    104\n",
-      "1     23\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    2766\n",
-      "2     456\n",
-      "1      54\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    11074\n",
-      "2     1783\n",
-      "1      250\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    44115\n",
-      "2     7304\n",
-      "1     1009\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    176514\n",
-      "2     29157\n",
-      "1      4044\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    352824\n",
-      "2     58411\n",
-      "1      8195\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    705787\n",
-      "2    116652\n",
-      "1     16421\n",
-      "Name: Accident_Severity, dtype: int64\n",
-      "3    1411343\n",
-      "2     233565\n",
-      "1      32813\n",
+      "3    167\n",
+      "2     31\n",
+      "1      6\n",
       "Name: Accident_Severity, dtype: int64\n"
      ]
     }
@@ -852,7 +824,7 @@
     "import numpy as np\n",
     "\n",
     "# power of two\n",
-    "for dim in [1_024, 4_096, 16_384, 65_536, 262_144, 524_288, 1_048_576, 2_097_152]:\n",
+    "for dim in [256]:\n",
     "    \n",
     "    temp_train, temp_test = train_test_split(df.sample(n=dim, random_state=42), test_size = 0.2)\n",
     "    print(temp_train['Accident_Severity'].value_counts())\n",
