--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,7 @@
        " './data/Vehicles0514.csv']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,9 +813,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3    167\n",
-      "2     31\n",
-      "1      6\n",
+      "3    5537\n",
+      "2     896\n",
+      "1     120\n",
       "Name: Accident_Severity, dtype: int64\n"
      ]
     }
@@ -824,7 +824,7 @@
     "import numpy as np\n",
     "\n",
     "# power of two\n",
-    "for dim in [256]:\n",
+    "for dim in [8192]:\n",
     "    \n",
     "    temp_train, temp_test = train_test_split(df.sample(n=dim, random_state=42), test_size = 0.2)\n",
     "    print(temp_train['Accident_Severity'].value_counts())\n",
@@ -893,7 +893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.9.10 ('ml-env')",
    "language": "python",
    "name": "python3"
   },
@@ -907,12 +907,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "41c13a82859d9c8eeaae64bb03e81fbe8994b6a8069bf7bdf2d82d735be1fecb"
+    "hash": "801db0422983b7b0a88b1867e1c191f1c8a74c49926eef68fac0019becddccd3"
    }
   }
  },
