--- a/external/preprocessing.ipynb
+++ b/external/preprocessing.ipynb
@@ -830,7 +830,7 @@
     "    print(temp_train['Accident_Severity'].value_counts())\n",
     "\n",
     "    temp_train.to_csv(f'{main_data_path}input_train_{dim}.csv')\n",
-    "    temp_train.to_csv(f'{main_data_path}input_test_{dim}.csv')"
+    "    temp_test.to_csv(f'{main_data_path}input_test_{dim}.csv')"
    ]
   },
   {
@@ -893,7 +893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('ml-env')",
+   "display_name": "Python 3.9.12 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -907,12 +907,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "801db0422983b7b0a88b1867e1c191f1c8a74c49926eef68fac0019becddccd3"
+    "hash": "7e0eeabbd9c5c8aa8452afaf0e08239a096213edea5d71398c57fda71d018071"
    }
   }
  },
