--- a/scripts/executors/runner.ipynb
+++ b/scripts/executors/runner.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import subprocess\n"
+    "import subprocess"
    ]
   },
   {
@@ -62,11 +62,6 @@
     "    run_date = datetime.now().strftime(\"%m/%d - %H:%M\")\n",
     "    f.write(\"\\r\\n===========\" + run_date )\n",
     "    q.write(\"\\r\\n===========\" + run_date )\n",
-    "    # f.close()\n",
-    "    # q.close()\n",
-    "\n",
-    "    # f = open(os.path.join(datapath, f\"{dim}_results.log\"), \"a\")\n",
-    "    # q = open(os.path.join(datapath, f\"{dim}_error.log\"), \"a\")\n",
     "\n",
     "    for x in [\"seq\", \"par\"]:\n",
     "        f.write(x+\":\\r\\n\")\n",
@@ -98,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
